--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -18,7 +18,7 @@ footer{
         width: 100%;
         padding: 10px;
         position: relative;
-        bottom: 55%;
+        bottom: 26px;
         @media (max-width: 480px) {
             flex-direction: column;
         }
@@ -29,7 +29,7 @@ footer{
         height: 20px;
         margin: 0 auto;
         position: relative;
-        bottom: 55%;  
+        bottom: 26px;  
     }
     .foot-email,
     .foot-phone,
@@ -37,6 +37,10 @@ footer{
         @extend .flex;
         img{
             margin-right: 10px;
+            @media (max-width: 768px) {
+                max-width: 30px;
+                max-height: 16px;
+            }
         }
     }
 }
@@ -58,6 +62,9 @@ footer{
         width: 100%;
         label{
             color: $primary;
+        }
+        @media (max-width: 480px) {
+            margin: 50px 0;
         }
     }
     .news-subscribe{
@@ -88,6 +95,9 @@ footer{
 }
 .quick-links{
     flex-basis: 20%;
+    @media (max-width: 480px) {
+        margin-bottom: 30px;
+    }
 }
 .latest-news{
     flex-basis: 25%;
@@ -103,19 +113,38 @@ footer{
             color: white;
             margin-right: 5px;
         }
+        @media (max-width: 480px) {
+            margin: 20px 0;
+        }
     }
     .link-news:nth-of-type(2){
         padding-top: 20px;
         border-top: 1px solid $p-color;
         margin: 30px 0;
+        @media (max-width: 480px) {
+            margin: 20px 0;
+            padding-top: 30px;
+        }
     }
 }
 .copyright{
     margin-top: 100px;
     .wrapper{
         border-top: 1px solid $p-color;
+        @extend .flex;
     }
-    p{
-        color: $p-color;
+    .foot-social{
+        flex-basis: 15%;
+        @extend .flex;
+        @media (max-width: 480px) {
+            display: none;
+        }
+    }
+    .foot-social i{
+        color: #757575;
+        transition: all 0.5s;
+    }
+    .foot-social i:hover{
+        color: $primary;
     }
 }
