--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -11,6 +11,9 @@ h1{
     @media (max-width: 940px) {
         font-size: 5.5rem;
     }
+    @media (max-width: 768px) {
+        font-size: 4.2rem;
+    }
     @media (max-width: 480px) {
         font-size: 3rem;
     }
@@ -248,6 +251,16 @@ p{
     h4,p{
         text-align: center;
     }
+    h4{
+        @media (max-width: 768px) {
+            font-size: 1.8rem;
+        }
+    }
+    p{
+        @media (max-width: 768px) {
+            font-size: 1.2rem;
+        }
+    }
 }
 .vp-statement{
     p,h4{
@@ -274,8 +287,7 @@ p{
         content: "";
         display: block;
         width: 60px;
-        // height: 1px;
-        border: 1px solid white;
+        border: 2px solid white;
         position: absolute;
         transform: translateX(50%);
         top:-141%;
