--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -312,6 +312,7 @@
             padding: 30px 16px;
         }
         @media (max-width: 480px) {
+            width: 100%;
            display: flex;
            flex-direction: row;
            padding: 50px;
